--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "postcss-scss": "^4.0.3",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-hook-form": "^7.27.1",
     "react-input-mask": "^2.0.4",
