--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.1.0",
-    "swiper": "lastest",
+    "swiper": "^8.0.7",
     "typescript": "^4.5.5"
   },
   "dependencies": {
