--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "export": "gulp && next export",
     "build": "next install && build",
     "dev-build": "next build",
-    "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
     "stylelint": "stylelint \"**/*.scss\" --fix",
     "test": "jest",
     "clear_jest": "jest --clearCache",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "start": "NODE_ENV=production next build && next start"
   },
   "author": "GLONASS MOBILE",
   "license": "ISC",
@@ -48,11 +48,11 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
     "react-hook-form": "^7.27.1",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^8.33.1",
     "react-modal": "^3.14.4",
+    "react-redux": "^7.2.6",
     "react-scrollbar-size": "^4.0.0",
     "sass": "^1.49.7",
     "stylelint": "^14.3.0",
@@ -75,6 +75,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "reselect": "^4.1.5",
+    "sharp": "^0.30.3",
     "use-react-dimensions": "^2.0.1",
     "yup": "^0.32.11"
   },
